# ppsim

./: .gitignore  LICENSE  MANIFEST.in  README.ipynb  README.md  README.tex.md  RUST_GUIDE.md  RUST_README.md  build_cython.bat  check_cython_module.py  check_module.py  check_rust_simulator.py  check_simulator_class.py  check_simulator_rust.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_cython_approx_majority.py  test_multibatch.py  test_rust_approx_majority.py
.ipynb_checkpoints/: ipympl-checkpoint.ipynb  majority_main_averaging-checkpoint.py  profiling-checkpoint.ipynb  test_notebook-checkpoint.ipynb  time_tests-checkpoint.ipynb
current/: example_notebook.ipynb  group meeting demonstration.ipynb  leader_minion.ipynb  majority.ipynb  size estimation.ipynb  split_join_majority.ipynb
doc/: .gitignore  conf.py  index.rst
examples/: README.ipynb  crn.ipynb  crn_script.py  dsd_rps.ipynb  dsd_rps.py  example_notebook.ipynb  majority.ipynb  rebop_samples_popsize10e2_trials10e3.parquet  rebop_samples_popsize10e2_trials10e4.parquet  rebop_samples_popsize10e2_trials10e5.parquet  rebop_samples_popsize10e2_trials10e6.parquet  rebop_samples_popsize10e4_trials10e3.parquet  rebop_samples_popsize10e4_trials10e4.parquet  rebop_samples_popsize10e4_trials10e5.parquet  rebop_samples_popsize10e4_trials10e6.parquet  rps_oscillator.ipynb  test_crn.py  test_stochkit.py  test_stochkit.xml
old/: extending_distributions.c  extending_distributions.pyx  profiling.py  setup2.py  simulators.c  (+2 more)
ppsim/rust/: Cargo.toml
ppsim/rust/src/: lib.rs  simulator.rs  urn.rs
(+42 files in other folders)
