[package]
name = "ppsim"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulator_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
numpy = { version = "0.18.0" }
ndarray = "0.15.6"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
statrs = "0.16.0"
